# miniagent

./: .gitignore  AI_PROMPTS.md  README.md  WRITTEN_TEST_REQUIREMENT.md  checklist.md  plan.md  pyproject.toml  spec.md  task.md
miniagent/: __init__.py  agent.py  cli.py  client.py  config.py  conversation.py  models.py  permissions.py  prompts.py  replay.py  result_budget.py  trace.py
miniagent/memory/: __init__.py  session.py
miniagent/tools/: __init__.py  base.py  calculator.py  search.py  todo.py
