[project]
name = "miniagent-written-test"
version = "0.1.0"
description = "A minimal tool-using Agent runtime for a written test."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.60.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["miniagent"]

